frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap');
@import "tailwindcss";

@custom-variant tab (@media (min-width: 481px) and (max-width: 980px));
@custom-variant desk (@media (min-width: 981px));
@custom-variant panel (@media (min-width: 681px));
@theme {
    --font-Inter: "Inter", sans-serif;
}

@theme{
    --font-Alata: "Alata", sans-serif;
}

@theme{
    --font-Google: "Google Sans Flex", sans-serif;
}

.Toastify__toast--info .Toastify__toast-icon svg {
  fill: rgb(226, 128, 16);
}

.Toastify__toast--info .Toastify__progress-bar {
  background: rgb(255, 123, 0);
}


 

